Fixed return to auditor issue